Add user-specified segment boundaries (#1439)
Added user-specified segment boundaries for each piece of media in a job request.
Co-authored-by: Brian Rosenberg <brosenberg@mitre.org>