@@ -51,6 +51,7 @@ import java.net.URI;
 import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.mockito.Mockito.*;
@@ -124,7 +125,7 @@ public class TestDetectionResponseProcessor {
 
         MediaImpl media = new MediaImpl(
                 MEDIA_ID, mediaUri.toString(), UriScheme.get(mediaUri), Paths.get(mediaUri),
-                Collections.emptyMap(), Collections.emptyMap(), null);
+                Map.of(), Map.of(), List.of(), List.of(), null);
         media.addMetadata("FPS", String.valueOf(FPS));
         media.addMetadata("DURATION", String.valueOf(DURATION));
         media.setFrameTimeInfo(FrameTimeInfo.forConstantFrameRate(FPS, 0, false));
@@ -137,9 +138,9 @@ public class TestDetectionResponseProcessor {
             1,
             null,
             null,
-            Collections.singletonList(media),
-            Collections.emptyMap(),
-            Collections.emptyMap());
+            List.of(media),
+            Map.of(),
+            Map.of());
 
         when(inProgressJobs.containsJob(JOB_ID))
                 .thenReturn(true);
